--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -187,7 +187,8 @@ InstanciaDeleted=Instancia eliminada
 InstanciaDeletedErrorOccured=Hubo un error eliminando la Instancia
 InstanciaHabilitada=Instancia habilitada
 InstanciaDeshabilitada=Instancia deshabilitada
-InstanciasAsociadas=Instancia Asociadas
+InstanciasAsociadasEstadoInicial=Estado Inicial asociado a:
+InstanciasAsociadasEstadoFinal=Estado Final asociado a:
 InstanciaTitle=Instancia
 InstanciaListTitle=Listado de Instancias
 InstanciaNewTitle=Nueva Instancia
@@ -198,6 +199,23 @@ CreateInstanciaTitle_nombre=Nombre
 CreateInstanciaRequiredMessage_nombre=El campo Nombre es obligatorio
 InstanciaProcedimientoAsociados=Procedimiento Asociado a esta Instancia
 CreateInstanciaLabel_procedimiento=Procedimiento
+CreateInstanciaLabel_ruta=Ruta
+CreateInstanciaRequiredMessage_ruta=El campo ruta es obligatorio
+CreateInstanciaLabel_codigo=C\u00f3digo
+CreateInstanciaRequiredMessage_codigo=El campo C\u00f3digo es obligatorio
+CreateInstanciaLabel_estadoInicial=Estado Inicial
+CreateInstanciaProcedimientoRequiredMessage_estadoInicial=El campo Estado Inicial es obligatorio
+CreateInstanciaLabel_estadoFinal=Estado Final
+CreateInstanciaProcedimientoRequiredMessage_estadoFinal=El campo Estado Final es obligatorio
 CreateInstanciaRequiredMessage_procedimiento=El campo procedimiento es obligatorio
 CreateInstanciaLabel_app=Aplicaci\u00f3n
 CreateInstanciaRequiredMessage_app=El campo Aplicaci\u00f3n es obligatorio
+CreateInstanciaLabel_alerta=Alerta
+CreateInstanciaRequiredMessage_cantidadAlerta=El campo Alerta es obligatorio
+CreateInstanciaLabel_UdTAlerta=Unidad de Tiempo del Alerta
+CreateInstanciaRequiredMessage_UdTAlerta=El campo Unidad de Tiempo para el alerta, es obligatorio
+CreateInstanciaLabel_vto=Vencimiento
+CreateInstanciaRequiredMessage_vto=El campo Vencimiento es obligatorio
+CreateInstanciaLabel_UdTVto=Unidad de Tiempo Vencimiento
+CreateInstanciaRequiredMessage_UdTVto=El campo Unidad de Tiempo para el Vencimiento, es obligatorio
+CreateInstanciaLabel_observaciones=Observaciones
