--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -111,7 +111,7 @@ EstadoEditTitle=Edite los datos del Estado
 CreateEstadoLabel_nombre=Nombre:
 CreateEstadoTitle_nombre=Nombre
 CreateEstadoRequiredMessage_nombre=El campo Nombre es obligatorio
-InstanciasAsociadas= Instancias Asociadas a este estado
+InstanciasAsociadas= Instancias Asociadas
 CreateEstadoRequiredMessage_app=El campo APP es obligatorio
 CreateEstadoLabel_app=APP:
 
@@ -148,7 +148,7 @@ CreateUnidadDeTiempoRequiredMessage_secuencia=El campo secuencia es obligatorio
 ##########################
 
 ProcedimientoNonDeletable=El procedimiento que quiere eliminar tiene dependencias, resuelva las dependencias primero.
-CreateProcedimientoExistente=Ya existe un Procedimiento con este nombre
+ProcedimientoExistente=Ya existe un Procedimiento con este nombre
 ProcedimientoCreated=Procedimiento creado
 ProcedimientoCreatedErrorOccured=Hubo un error creando el Procedimiento
 ProcedimientoUpdated=Procedimiento actualizado
@@ -187,8 +187,6 @@ InstanciaDeleted=Instancia eliminada
 InstanciaDeletedErrorOccured=Hubo un error eliminando la Instancia
 InstanciaHabilitada=Instancia habilitada
 InstanciaDeshabilitada=Instancia deshabilitada
-InstanciasAsociadasEstadoInicial=Estado Inicial asociado a:
-InstanciasAsociadasEstadoFinal=Estado Final asociado a:
 InstanciaTitle=Instancia
 InstanciaListTitle=Listado de Instancias
 InstanciaNewTitle=Nueva Instancia
