crea Procedimiento no inserta Instancia

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -171,6 +171,7 @@ CreateProcedimientoLabel_instancia=Instancia
 CreateProcedimientoRequiredMessage_instancia=El campo Instancia es obligatorio
 CreateProcedimientoLabel_app=Aplicaci\u00f3n
 CreateProcedimientoRequiredMessage_app=El campo Aplicaci\u00f3n es obligatorio
+CreateInstanciaRequiredMessage_observaciones=Observaciones
 
 
 #########################
