edito procedimiento e instancias y deshabilito/habilito

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -163,6 +163,8 @@ ProcedimientoListTitle=Listado de Procedimientos
 ProcedimientoNewTitle=Nuevo Procedimiento
 ProcedimientoViewTitle=Detalle del Procedimiento
 ProcedimientoEditTitle=Edite los datos del Procedimiento
+ProcedimientoDeshabilitado=Procedimiento Desahabilitado
+ProcedimientoHabilitado=Procedimiento Habilitado
 CreateProcedimientoLabel_nombre=Nombre:
 CreateProcedimientoTitle_nombre=Nombre
 CreateProcedimientoRequiredMessage_nombre=El campo Nombre es obligatorio
