--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -174,6 +174,7 @@ CreateProcedimientoRequiredMessage_instancia=El campo Instancia es obligatorio
 CreateProcedimientoLabel_app=Aplicaci\u00f3n
 CreateProcedimientoRequiredMessage_app=El campo Aplicaci\u00f3n es obligatorio
 CreateInstanciaRequiredMessage_observaciones=Observaciones
+FaltaApp=Deber\u00e1 ingresar la aplicaci\u00f3n, de modo previo a la carga de Instancias. 
 
 
 #########################
