lista para ser revisada por Rubén

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -151,7 +151,7 @@ ProcedimientoNonDeletable=El procedimiento que quiere eliminar tiene dependencia
 ProcedimientoExistente=Ya existe un Procedimiento con este nombre
 ProcedimientoCreated=Procedimiento creado
 ProcedimientoCreatedErrorOccured=Hubo un error creando el Procedimiento
-ProcedimientoUpdated=Procedimiento actualizado
+ProcedimientoUpdated=Procedimiento  Actualizado exitosamente
 ProcedimientoUpdatedErrorOccured=Hubo un error actualizando el Procedimiento
 ProcedimientoDeleted=Procedimiento eliminado
 ProcedimientoDeletedErrorOccured=Hubo un error eliminando el Procedimiento
