--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -5,17 +5,21 @@ Aplicacion=Administraci\u00f3n del servicio de Gesti\u00f3n de Tr\u00e1mites
 Principal=Desde aqu\u00ed podr\u00e1 administrar las entidades del servicio de [remota]
 logError=faces/logError.xhtml
 
-Pie_1=SAyDS
-Pie_2=Coordinaci\u00f3n de Inform\u00e1tica \u2022 Desarrollo de Aplicaciones
-Pie_3=Reconquista 555 \u2022 C1004AAI \u2022 CABA \u2022 Argentina \u2022 Tel (54) (11) 4348 8662 \u2022 aplicaciones@ambiente.gob.ar
-Pie_4=Mesa de Servicios Inform\u00e1ticos int. 555 \u2022 mesadeservicios@ambiente.gob.ar
-
 PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
 RutaAplicacion=/gestionTramites
 Servidor=http://localhost:8080
+#Servidor=http://vmdeswebjava.medioambiente.gov.ar:8080
+
+# Ruta de la aplicaci\u00f3n SSO que realizar\u00e1 la autenticaci\u00f3n de usuarios
+RutaAutenticacion=http://localhost:8080/gestionAplicaciones
+#RutaAutenticacion=http://vmdeswebjava.medioambiente.gov.ar:8080/gestionAplicaciones
+
+# Nombre de las cookies para la autenticaci\u00f3n
+nameCookieUser=user
+nameCookieUrl=url
 
 ################## Ra\u00edces Admin #################
 RaizProcedimiento=faces/administracion/procedimiento
@@ -47,7 +51,12 @@ CreateTipoCapNombreExistente=Ya existe un usuario con ese nombre
 UsuarioTitle=Usuarios
 UsuarioListTitle=Listado de Usuarios
 UsuarioLabelNombre=Nombre:
+UsuarioTitleNombre=Nombre
+UsuarioLabelNombreCompleto=Nombre completo:
+UsuarioTitleNombreCompleto=Nombre completo
 UsuarioLabelRol=Rol:
+UsuarioTitleRol=Rol
+UusarioLabelUsDisp=Usuario disponible:
 UsuarioLabelFechaAlta=Fecha de Alta:
 UsuarioLabelUsAlta=Usuario de Alta:
 
@@ -58,6 +67,8 @@ FechaModifica=Fecha de modificaci\u00f3n:
 UsuarioBaja=Usuario de Baja:
 FechaBaja=Fecha de Baja:
 
+UsuarioAppErrorWs=Hubo un error obteniendo la aplicaci\u00f3n del Servicio AccesoAppWebService
+UsuarioUsErrorWs=Hubo un error obteniendo los usuarios del Servicio AccesoAppWebService
 
 ##########################
 ######### Rol ############
@@ -171,7 +182,8 @@ CreateProcedimientoRequiredMessage_nombre=El campo Nombre es obligatorio
 ProcedimientoInstanciasAsociadas= Instancias Asociadas a este Procedimiento
 CreateProcedimientoLabel_instancia=Instancia
 CreateProcedimientoRequiredMessage_instancia=El campo Instancia es obligatorio
-CreateProcedimientoLabel_app=Aplicaci\u00f3n
+CreateProcedimientoLabel_app=Aplicaci\u00f3n:
+CreateProcedimientoTitle_app=Aplicaci\u00f3n
 CreateProcedimientoRequiredMessage_app=El campo Aplicaci\u00f3n es obligatorio
 CreateInstanciaRequiredMessage_observaciones=Observaciones
 FaltaApp=Deber\u00e1 ingresar la aplicaci\u00f3n, de modo previo a la carga de Instancias. 
