--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -10,8 +10,8 @@ Previous=Previous
 Next=Next
 
 RutaAplicacion=/gestionTramites
-Servidor=http://localhost:8080
-#Servidor=http://vmdeswebjava.medioambiente.gov.ar:8080
+#Servidor=http://localhost:8080
+Servidor=http://vmdeswebjava.medioambiente.gov.ar:8080
 
 # Ruta de la aplicaci\u00f3n SSO que realizar\u00e1 la autenticaci\u00f3n de usuarios
 RutaAutenticacion=http://localhost:8080/gestionAplicaciones
